2015-03-01 Even Rouault <even dot rouault at spatialys dot com>
	* csv/build_pcs.py: when converting rotational values for TOWGS84 clause
	from other units into arc-seconds, do not output them with too big
	accuracy.
	* csv/datum_shift.csv, csv/gcs.csv: regenerated with above change.

2015-02-07 Even Rouault <even dot rouault at spatialys dot com>
	* libgeotiff/geo_new.c, libgeotiff/geo_write.c, libgeotiff/geo_print.c:
	Fix warnings about strict-aliasing issues

2014-12-27 Even Rouault <even dot rouault at spatialys dot com>
	* libgeotiff/geo_normalize.c: GTIFGetDefn(): deal with Polyconic and
	Equirectangular when reading PCS code only

2014-12-27 Even Rouault <even dot rouault at spatialys dot com>
	* libgeotiff/geotiff_proj4.c: handle (as better as we can without a
	proper CT_ constant) Mercator 2SP (#72)

2014-12-27 Even Rouault <even dot rouault at spatialys dot com>
	* libgeotiff/geo_normalize.c: GTIFGetDefn():
	fix for handling Mercator_2SP when reading PCS code only (#72)

2014-12-27 Even Rouault <even dot rouault at spatialys dot com>
	* libgeotiff/cpl_serv.c, libgeotiff/geo_normalize.c: GTIFGetDefn():
	issue a CE_Warning if .csv files cannot be found (GDAL #956)

2014-12-27 Even Rouault <even dot rouault at spatialys dot com>
	* libgeotiff/geo_normalize.c: GTIFGetDefn(): fix decoding of Polar
	Stereographic Variant B (EPSG 9829) (GDAL #3220)

2014-12-25 Even Rouault <even dot rouault at spatialys dot com>
	* libgeotiff/geo_new.c, libgeotiff/geo_print.c, libgeotiff/geo_set.c:
	Upstream compiler warnings fixes of libgeotiff from GDAL
	(http://trac.osgeo.org/gdal/changeset/27745, GDAL #5414)

2014-12-23 Even Rouault <even dot rouault at spatialys dot com>
	* libgeotiff/geo_normalize.c: GTIFGetDefn(): secure calls to
	GTIFKeyGet() by checking that the type of the stored key matches the
	expected type

2014-12-23 Even Rouault <even dot rouault at spatialys dot com>
	* listgeo: fix/workaround a crash on a corrupted image generated by afl
